# SWE_HW1

./: Architecture.md  CMakeLists.txt  Config.cmake.in  Control_and_acceptance_procedure.md  LICENSE  README.md  Requirements.md  build_repo_structure.sh
.github/workflows/: test.yaml
docs/: Architecture.md  Control_and_acceptance_procedure.md  Reports.md  Requirements.md  bench_report.txt  convert.py
include/: converter.hpp  edge.hpp  spath.hpp
src/: bench.cpp  converter.cpp  spath.cpp  spath.hpp  tests.cpp
tests/: bench.cpp  env.cpp  tests.cpp
utility/: Architecture-template.md  build_repo_structure.sh
